@@ -1064,44 +1064,85 @@ FLOAT_T rate1_table[] =
 	6.30, 6.40, 6.50, 6.60, 6.70, 6.80, 6.90, 7.00, 7.50, 8.00, 8.50, 9.00, 9.50, 10.00, 10.00, 10.00,
 };
 
+/* Derivation of Perceived Volume Curve Equation:
+ *
+ *    Given: delta dB = 20 * log10(amplitude_new / amplitude_old)
+ *           delta dB of 10 == perceived volume change of 2x
+ *
+ *    10 = 20 * log10(?)
+ *    0.5 = log10(?)
+ *    10^0.5 = ?
+ *
+ *    therefore: 2x perceived volume == ~3.16x amplitude
+ *               4x perceived volume ==    10x amplitude
+ *
+ *       Volume         Amplitude
+ *       ------------   ---------------
+ *       1              1
+ *       0.25           0.1
+ *       0.0625         0.01
+ *       0.015625       0.001
+ *       0.00390625     0.0001
+ *       0.0009765625   0.00001
+ *       0              0
+ *
+ *    Fit curve to table:
+ *
+ *       amplification = pow(volume, 1.66096404744)
+ */
+FLOAT_T perceived_vol_table[128];
+
+void init_perceived_vol_table(void)
+{
+	int i;
+	
+	for (i = 0; i < 128; i++)
+		perceived_vol_table[i] =
+				127.0 * pow((double)i / 127.0, 1.66096404744);
+}
+
+/* measured value from SC-88STPro.
+   approximate expression: y = (-0.3768x6 + 0.9528x5 - 0.8253x4 + 0.2665x3 + 0.9892x2 - 0.0059x + 0.001) * 127 */
 FLOAT_T sc_vol_table[128] = 
 {
-    0.000000, 0.007874, 0.031496, 0.070866, 0.125984, 0.196850, 0.283465, 0.385827, 
-    0.503937, 0.637795, 0.787402, 0.952756, 1.133858, 1.330709, 1.543307, 1.771654, 
-    2.015748, 2.275591, 2.551181, 2.842520, 3.149606, 3.472441, 3.811024, 4.165354, 
-    4.535433, 4.921260, 5.322835, 5.740157, 6.173228, 6.622047, 7.086614, 7.566929, 
-    8.062992, 8.574803, 9.102362, 9.645669, 10.204724, 10.779528, 11.370079, 11.976378, 
-    12.598425, 13.236220, 13.889764, 14.559055, 15.244094, 15.944882, 16.661417, 17.393701, 
-    18.141732, 18.905512, 19.685039, 20.480315, 21.291339, 22.118110, 22.960630, 23.818898, 
-    24.692913, 25.582677, 26.488189, 27.409449, 28.346457, 29.299213, 30.267717, 31.251969, 
-    32.251969, 33.267717, 34.299213, 35.346457, 36.409449, 37.488189, 38.582677, 39.692913, 
-    40.818898, 41.960630, 43.118110, 44.291339, 45.480315, 46.685039, 47.905512, 49.141732, 
-    50.393701, 51.661417, 52.944882, 54.244094, 55.559055, 56.889764, 58.236220, 59.598425, 
-    60.976378, 62.370079, 63.779528, 65.204724, 66.645669, 68.102362, 69.574803, 71.062992, 
-    72.566929, 74.086614, 75.622047, 77.173228, 78.740157, 80.322835, 81.921260, 83.535433, 
-    85.165354, 86.811024, 88.472441, 90.149606, 91.842520, 93.551181, 95.275591, 97.015748, 
-    98.771654, 100.543307, 102.330709, 104.133858, 105.952756, 107.787402, 109.637795, 111.503937, 
-    113.385827, 115.283465, 117.196850, 119.125984, 121.070866, 123.031496, 125.007874, 127.000000, 
+    0.000000, 0.128905, 0.146482, 0.179815, 0.228982, 0.294049, 0.375078, 0.472120, 
+    0.585221, 0.714419, 0.859746, 1.021229, 1.198887, 1.392736, 1.602785, 1.829039, 
+    2.071501, 2.330166, 2.605028, 2.896078, 3.203301, 3.526682, 3.866202, 4.221841, 
+    4.593575, 4.981382, 5.385233, 5.805103, 6.240963, 6.692783, 7.160536, 7.644189, 
+    8.143714, 8.659080, 9.190256, 9.737215, 10.299925, 10.878360, 11.472491, 12.082292, 
+    12.707738, 13.348803, 14.005465, 14.677704, 15.365497, 16.068829, 16.787681, 17.522039, 
+    18.271890, 19.037223, 19.818029, 20.614301, 21.426034, 22.253225, 23.095873, 23.953980, 
+    24.827548, 25.716584, 26.621094, 27.541088, 28.476578, 29.427576, 30.394100, 31.376165, 
+    32.373791, 33.386998, 34.415810, 35.460249, 36.520342, 37.596115, 38.687597, 39.794815, 
+    40.917801, 42.056586, 43.211200, 44.381677, 45.568048, 46.770346, 47.988605, 49.222856, 
+    50.473131, 51.739464, 53.021883, 54.320420, 55.635102, 56.965957, 58.313010, 59.676284, 
+    61.055802, 62.451580, 63.863636, 65.291982, 66.736627, 68.197578, 69.674835, 71.168397, 
+    72.678255, 74.204399, 75.746811, 77.305466, 78.880337, 80.471388, 82.078576, 83.701851, 
+    85.341158, 86.996429, 88.667594, 90.354568, 92.057260, 93.775571, 95.509387, 97.258589, 
+    99.023042, 100.802603, 102.597116, 104.406412, 106.230309, 108.068613, 109.921115, 111.787592, 
+    113.667805, 115.561500, 117.468408, 119.388243, 121.320699, 123.265458, 125.222177, 127.000000, 
 };
 
+/* measured value from SC-88STPro.
+   approximate expression: y = (-1.5374x6 + 4.4002x5 - 4.8309x4 + 2.572x3 + 0.1487x2 + 0.2412x + 0.0044) * 127 */
 FLOAT_T sc_vel_table[128] = 
 {
-    1.016000, 1.060423, 1.151432, 1.275990, 1.429005, 1.607424, 1.809141, 2.032582, 
-    2.276514, 2.539938, 2.822025, 3.122069, 3.439465, 3.773686, 4.124269, 4.490803, 
-    4.872919, 5.270290, 5.682617, 6.109630, 6.551085, 7.006757, 7.476442, 7.959952, 
-    8.457114, 8.967769, 9.491771, 10.028985, 10.579287, 11.142561, 11.718701, 12.307610, 
-    12.909195, 13.523374, 14.150070, 14.789212, 15.440734, 16.104577, 16.780685, 17.469009, 
-    18.169503, 18.882126, 19.606840, 20.343613, 21.092414, 21.853217, 22.626000, 23.410743, 
-    24.207429, 25.016045, 25.836580, 26.669025, 27.513376, 28.369629, 29.237784, 30.117843, 
-    31.009810, 31.913691, 32.829495, 33.757233, 34.696918, 35.648563, 36.612187, 37.587806, 
-    38.575442, 39.575117, 40.586854, 41.610680, 42.646622, 43.694708, 44.754969, 45.827438, 
-    46.912148, 48.009134, 49.118435, 50.240087, 51.374130, 52.520607, 53.679559, 54.851031, 
-    56.035069, 57.231719, 58.441029, 59.663051, 60.897833, 62.145430, 63.405894, 64.679280, 
-    65.965646, 67.265048, 68.577546, 69.903200, 71.242071, 72.594222, 73.959717, 75.338622, 
-    76.731003, 78.136927, 79.556465, 80.989686, 82.436661, 83.897465, 85.372170, 86.860852, 
-    88.363588, 89.880455, 91.411533, 92.956901, 94.516642, 96.090837, 97.679572, 99.282930, 
-    100.901000, 102.533868, 104.181623, 105.844356, 107.522158, 109.215122, 110.923342, 112.646914, 
-    114.385934, 116.140499, 117.910710, 119.696666, 121.498469, 123.316223, 125.150031, 127.000000, 
+    0.000000, 0.801328, 1.047122, 1.297056, 1.551953, 1.812583, 2.079668, 2.353885, 
+    2.635863, 2.926190, 3.225412, 3.534034, 3.852525, 4.181317, 4.520806, 4.871357, 
+    5.233303, 5.606946, 5.992560, 6.390392, 6.800666, 7.223577, 7.659301, 8.107993, 
+    8.569785, 9.044792, 9.533111, 10.034824, 10.549997, 11.078680, 11.620912, 12.176722, 
+    12.746124, 13.329126, 13.925725, 14.535911, 15.159666, 15.796968, 16.447787, 17.112090, 
+    17.789842, 18.481003, 19.185529, 19.903380, 20.634509, 21.378873, 22.136426, 22.907127, 
+    23.690932, 24.487801, 25.297696, 26.120582, 26.956425, 27.805197, 28.666872, 29.541428, 
+    30.428848, 31.329119, 32.242232, 33.168184, 34.106974, 35.058609, 36.023099, 37.000459, 
+    37.990710, 38.993877, 40.009989, 41.039080, 42.081190, 43.136361, 44.204639, 45.286075, 
+    46.380723, 47.488640, 48.609885, 49.744520, 50.892609, 52.054217, 53.229410, 54.418254, 
+    55.620816, 56.837160, 58.067351, 59.311450, 60.569517, 61.841607, 63.127770, 64.428053, 
+    65.742497, 67.071133, 68.413988, 69.771079, 71.142412, 72.527985, 73.927782, 75.341776, 
+    76.769925, 78.212172, 79.668444, 81.138652, 82.622687, 84.120420, 85.631702, 87.156361, 
+    88.694200, 90.244998, 91.808507, 93.384452, 94.972526, 96.572391, 98.183679, 99.805985, 
+    101.438869, 103.081852, 104.734417, 106.396007, 108.066018, 109.743805, 111.428675, 113.119886, 
+    114.816648, 116.518116, 118.223392, 119.931522, 121.641492, 123.352230, 125.062599, 127.000000, 
 };
 
 FLOAT_T sc_pan_table[128] = 
